2006-09-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-action.c:
	- made Poppler::Action read only.
	- used macros for defining methods of Poppler::Dest.

	* ./: don't require a patch of Bug 6912 for Poppler.
	https://bugs.freedesktop.org/show_bug.cgi?id=6912

	* extconf.rb: don't check whether PopplerActionAny is exist or
	not.

	* src/rbpoppler-action.c, src/rbpoppler.h: Poppler::Action is
	always available.
	* src/rbpoppler-page.c: Poppler::LinkMapping#action is always
	available.

2006-07-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-page.c:
	- can compile without rcairo.
	- don't use PopplerAction when PopplerActionAny is exist.

2006-06-27  Kouhei Sutou  <kou@cozmixng.org>

	* README: required 0.5.2 or later poppler-glib.
	* extconf.rb: ditto.

2006-06-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-document.c: use GLIST2ARYF.
	* src/rbpoppler-page.c: use GLIST2ARY2F.

	* src/: worked without any patches for poppler-glib.

	* extconf.rb: check whether
	  poppler_page_render_selection_to_pixbuf() and
	  PopplerActionAny are available or not.

	* src/rbpoppler-page.c: check whether
	  poppler_render_selection_to_pixbuf() is available or not.

	* src/rbpoppler-document.c: disable Poppler::FontInfo and related
	  methods when POPPLER_TYPE_FONT_INFO is not
	  available. (POPPLER_TYPE_FONT_INFO is not available means
	  PopplerFontInfo is not GObjectize.)

	* src/rbpoppler-action.c: disable Poppler::Action* and related
	  stuffs when PopplerActionAny is available. (PopplerActionAry is
	  available means PopplerAction* are not GObjectize.)
	* src/rbpoppler-document.c: ditto.
	* src/rbpoppler.h.c: ditto.

2006-05-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-document.c: fixed memory leaks.
	* src/rbpoppler-page.c: ditto.

2006-05-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-page.c:
	- made Poppler::Page#render generic method.
	- removed Poppler::Page#render_to_pixbuf.
	- removed Poppler::Page#render_to_ps.